view with WHERE in nested join (BUG#5511)